Epic E4 Observability and operations